[package]
name = "gm-payment-service"
version = "0.33.0"
authors = ["Peita <n6378056@gmail.com>"]
edition = "2018"

[lib]
# The name of the library that will be generated: common modules used in this app.
# This defaults to the name of the [package], with any dashes replaced
# with underscores. (Rust `extern crate` declarations reference this name)
name = "gm"
# This field points at where the crate is located, relative to the `Cargo.toml`.
path = "src/lib.rs"

[dependencies]
actix-rt = "1.1.1"
actix-cors = "0.3.0-alpha.1"
actix-identity = "0.3.0-alpha.1"
actix-web = { version = "3.0.0-alpha.3", features=["rustls"] }
actix-web-actors = "2.0.0"
actix = "0.10.0-alpha.3"
actix-http = { version = "2.0.0-alpha.4", features = ["actors"] }


base64 = "0.10.1"
bytes = "0.4"
bugsnag = "0.2.1"
dotenv = "0.10"
itertools = "0.8"

failure = "0.1.5"
failure_derive = "0.1.5"
futures = "0.3.5"
futures-util = "0.3.5"
json = "0.11"

lazy_static = "1.4.0"
log = "0.4"
num = "0.2"
pretty_env_logger = "0.3"

rand = "0.7.3"
r2d2 = "0.8"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_qs = "0.5.2"
uuid = { version = "0.8", features = ["serde", "v4"] }


[dependencies.diesel]
version = "1.4.3"
features = ["postgres", "chrono", "serde_json", "uuid", "r2d2"]


[dependencies.chrono]
version = "0.4"
features = ["serde"]
